correções de img e texto

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li id="esteiras" class="itens-menu lock">ESTEIRAS</li>
       <li id="cco" class="itens-menu lock">CCO</li>
       <li id="dufry" class="itens-menu lock">DUFRY</li>
-      <li id="receita" class="itens-menu lock">RECEITA</li>
+      <li id="receita" class="itens-menu lock">RECEITA FEDERAL</li>
       <li id="vigiario" class="itens-menu lock">VIGIAGRO</li>
       <li id="federal" class="itens-menu lock">POLÍCIA FEDERAL</li>
       <li id="fechar" class="w-hidden-main w-hidden-medium w-hidden-small itens-menu">X FECHAR</li>
@@ -131,7 +131,7 @@
   </div>
   <div class="w-section section-all lider sec-02 sec-esteiras">
     <div class="w-container container">
-      <h1 class="section-title title-02">ESTEIRAS</h1><img src="images/Terminal de Cargas  do Aeroporto de Brasilia foto Sheyla Leal 2.jpg" class="arte01">
+      <h1 class="section-title title-02">ESTEIRAS</h1><img src="images/esteiras.jpg" class="arte01">
       <p>Um emaranhado de esteiras rolantes transporta, em média, 400 bagagens por hora no aeroporto de Brasília. Por meio de uma tecnologia holandesa, uma mala leva cerca de oito minutos para percorrer o caminho dos balcões de check-in até o pátio das aeronaves.</p>
       <p>O investimento de R$ 40 milhões por parte da Inframerica, administradora do terminal desde o fim de 2012, agilizou um processo considerado crucial para a pontualidade dos voos. Além do aeroporto de Brasília, apenas o de Guarulhos (SP) e do Galeão (RJ) contam com esse moderno sistema de manuseio e movimentação de bagagens.</p>
       <p>No terminal JK, são 5,2 quilômetros de esteiras: tudo automatizado. O código de barras fixado na mala pelo funcionário da companhia aérea traz as informações do voo daquele passageiro, identificadas por leitores ópticos, que definem o trajeto da bagagem pelos caminhos entrelaçados.</p>
@@ -164,7 +164,7 @@
   </div>
   <div class="w-section section-all cracolandia-vertical sec-receita">
     <div class="w-container container">
-      <h1 class="section-title">RECEITA</h1><img src="images/Receita Federal do Aeroporto de Brasilia foto Sheyla Leal 3.jpg" class="arte01">
+      <h1 class="section-title">RECEITA FEDERAL</h1><img src="images/Receita Federal do Aeroporto de Brasilia foto Sheyla Leal 3.jpg" class="arte01">
       <p>O famoso jeitinho brasileiro, tão enraizado no imaginário e nos hábitos dos viajantes, é o que mais justifica a atuação firme da Receita Federal no aeroporto de Brasília.</p>
       <p>“Não temos a pretensão de sermos paladinos da Justiça ou algo que o valha. Somos cumpridores da lei: apenas isso. Nosso objetivo é proteger a economia brasileira. A arrecadação é consequência”, comenta o chefe da equipe de bagagem da alfândega do terminal JK, Felipe Netto.</p>
       <p>Contribuir para essa arrecadação – que saltou 66% em 2015, na comparação com o ano anterior – é o que os passageiros menos querem quando desembarcam no Brasil.</p>
@@ -217,12 +217,14 @@
       <h1 class="section-title">EQUIPE</h1>
       <h3 class="subtitle-equipe">Imagens e reportagem</h3>
       <p>Diego Amorim</p>
+      <h3 class="subtitle-equipe">Fotografia</h3>
+      <p>Sheyla Leal</p>
       <h3 class="subtitle-equipe">Edição de texto</h3>
       <p>Diego Amorim e Clovis Souza</p>
       <h3 class="subtitle-equipe">Revisão de texto</h3>
       <p>Fabrícia Gouveia</p>
-      <h3 class="subtitle-equipe">Edição de imagens</h3>
-      <p>TV Fato e&nbsp;Vinicius Miranda</p>
+      <h3 class="subtitle-equipe">Edição de imagens e Animação 3D</h3>
+      <p>Nathália Coelho e&nbsp;Vinicius Miranda (TV Fato)</p>
       <h3 class="subtitle-equipe">arte e Desenvolvimento</h3>
       <p>Alexandre Fonseca e Fabrício Assis</p>
     </div>
@@ -232,7 +234,5 @@
   <script type="text/javascript" src="js/pessoal.js"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
   <script src="https://rawgit.com/fatoonline/2016_02_19-aeroporto/master/js/pessoal.js"></script>
-
-  2016_02_19-aeroporto/tree/master/js
 </body>
 </html>
